[package]
name = "wallpaper-changer"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attohttpc = { version = "0.24.0", features = ["json"] }
wallpape-rs = { version = "2.0.0", features = ["from_url"] }
serde_json = "1.0.89"
rand = "0.8.5"
dirs = "4.0.0"
